# SolitaireOOP

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  SolitaireFixed.cpp  SolitaireFixed.h  SolitareFixed.cbp  SolitareFixed.layout  main.cpp
SolitaireOOP.dir/Debug/SolitaireOOP.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog
resources/: cards.qrc
src/cpp/: Card.cpp  Deck.cpp  FoundationPile.cpp  GameEngine.cpp  PileVirt.cpp  Selection.cpp  TablePile.cpp  WastePile.cpp  card.cpp  command.cpp  deck.cpp  foundationpile.cpp  gameengine.cpp  pile.cpp  stockpile.cpp  tablepile.cpp  wastepile.cpp
src/gui/: CardItem.cpp  GameManager.cpp  MainWindow.cpp  PileItem.cpp
src/guiHeader/: CardItem.h  GameManager.h  MainWindow.h  PileItem.h
src/header/: Card.h  Deck.h  FoundationPile.h  GameEngine.h  PileVirt.h  Selection.h  TablePile.h  Types.h  WastePile.h  card.h  command.h  deck.h  foundationpile.h  gameengine.h  pile.h  stockpile.h  tablepile.h  types.h  wastepile.h
